--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Gather</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="dist/app.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gather</title>
-    <link rel="stylesheet" href="dist/styles.css" />
-</head>
+	<body class="text-slate-100 bg-zinc-800">
+		<div class="flex justify-center mt-5">
+			<h1
+				class="font-bold bg-gradient-to-r from-red-500 to-orange-500 bg-clip-text text-transparent"
+			>
+				Gather
+			</h1>
+		</div>
+		<button
+			class="rounded-full p-2 px-4 bg-white text-black text-center bg-gradient-to-r from-red-500 to-orange-500 hover:bg-gradient-to-r hover:from-blue-500 hover:to-violet-500"
+		>
+			Host a gathering
+		</button>
+		<div class="flex justify-center items-center h-screen">
+			<article id="gathering-list"></article>
+		</div>
 
-<body>
-    <h1>Gather</h1>
-
-    <article id="gathering-list"></article>
-
-    <script type="module" src="dist/app.js"></script>
-</body>
-
+		<script type="module" src="dist/app.js"></script>
+	</body>
 </html>
